[project]
name = "coach_agent"
version = "0.0.1"
description = "CBT Coach Agent LangGraph"
authors = [
    { name = "Heejung Yu", email = "yuhj@ewha.ac.kr" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    # --- Core ---
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv>=1.0.1",
    "python-frontmatter",
    "jinja2",

    # --- LangChain / LangGraph ---
    "langchain",
    "langgraph>=1.0.0",
    "langchain-openai",
    "langsmith",
    "langchain-community",

    # --- Firebase ---
    "firebase-admin",
    "google-api-core",
    "langchain-google-firestore",

    # --- RAG / Vector DB ---
    "pinecone",
    "langchain-pinecone",
    "langchain_huggingface",
    "setence-transformers",

    # --- Utils ---
    "PyYAML",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.7",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]
